Contained UBRoller in it's own div

--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-  <div id="App"></div>  
+  <div id="UBRoller-Container"></div>  
   <div id="Extra"></div>
+  <div id=""></div>
 </body>
 
 </html></html>
