Added UBRoller component (#3)

--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" >
   <title>PROJECT: Brave-Beetle</title>
 </head>
 
 <body>
-  <div id="client"></div>  
+  <div id="UBRoller-Container"></div>  
+  <div id="Extra"></div>
+  <div id=""></div>
 </body>
 
 </html></html>
