--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+  <div id="Header"></div>
+  <div id="left-side-container"></div>
+  <div id="jumbotron-container"></div>
   <div id="UBRoller-Container"></div>  
   <div id="Extra"></div>
-  <div id=""></div>
 </body>
 
 </html></html>
