renamed components to beetles

--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-  <div id="Header"></div>
-  <div id="left-side-container"></div>
-  <div id="jumbotron-container"></div>
-  <div id="UBRoller-Container"></div>  
+  <div id="Hercules"></div>
+  
+  <div id="main">
+    <div id="left-side-container"></div>
+    <div id="jumbotron-container"></div>
+    <div id="Kabuto"></div>  
+  </div>
+  
   <div id="Extra"></div>
 </body>
 
